# joystck_controller

./: .gitignore  AGENTS.md  AGENTS_ARCHITECTURE_REVIEW.md  ARCHITECTURE.md  CONTROLLER_USAGE.md  HOW_TO_USE.md  IMPROVEMENT_PLAN.md  MOTOR3_FIX_REPORT.md  NODE_GRAPH.md  QUICK_START.md  README.md  README.zh-CN.md  README.zh-TW.md  ROS_DOMAIN_ISOLATION.md  SAFETY_REPORT.md  SPEED_TUNING.md  TESTING_GUIDE.md  check_jazzy_compatibility.sh  complete_startup_guide.sh  direct_motor_test.py  direct_test.sh  final_test_guide.sh  launch_hand_controller.sh  motor_reversal_test.py  r1 final operation guide 1.0.md  r1_start_base_1_0.sh  r1_start_keyboard_1_0.sh  retest_commands.sh  set_speed.sh  simple_motor_controller.py  simple_test.sh  start.sh  start_background.sh  start_full_control_chain.sh  start_ssh.sh  start_test_system.sh  stop.sh  sudo_launch.sh  test_can_converter.sh  test_full_system.sh
arduino/: README.md
arduino/five_relay_panel/: five_relay_panel.ino
docs/history/: AGENTS_ARCHITECTURE_REVIEW.md  HOW_TO_USE.md  IMPROVEMENT_PLAN.md  MOTOR3_FIX_REPORT.md  README.root-before-cleanup.md  SPEED_TUNING.md  r1 final operation guide 1.0.md  repository-cleanup-notes.md
docs/i18n/: README.en.md  README.zh-CN.md  README.zh-TW.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
log/: latest_build
rules/: robocon2026_r1_strategy_detailed.md
scripts/: wait_and_start_robot.sh
src/arduino_pneumatic_driver/: README.md  TODO.md  package.xml  setup.cfg  setup.py
src/arduino_pneumatic_driver/arduino_pneumatic_driver/: pneumatic_gripper_joystick_bridge_node.py  pneumatic_relay_driver_node.py
src/arduino_pneumatic_driver/test/: test_dual_arm_pneumatic.py
src/base_omniwheel_r2_700/: README.md  TODO.md  debug_motor_communication.sh  diagnose_damiao.sh  emergency_stop.sh  package.xml  setup.cfg  setup.py  start_damiao_node.sh  test_damiao.sh  test_damiao_vel.sh  test_each_motor_individually.sh  test_local_navigation.sh  test_single_motor.sh
src/joystick_bridge/: README.md  TODO.md  TROUBLESHOOTING.md  package.xml  setup.py
src/joystick_bridge/joystick_bridge/: joystick_bridge.py
src/joystick_bridge/resource/: joystick_bridge
src/joystick_bridge/scripts/: joystick_bridge
src/keyboard_teleop/: README.md  TODO.md  package.xml  setup.py
src/kfs_staff_gripper/: README.md  TODO.md  package.xml  setup.cfg  setup.py
src/my_joystick_msgs/: TODO.md  (+3 more)
src/r1_arm_control/: README.md  TODO.md  package.xml
src/r1_arm_control/r1_arm_control/: arm_gripper_joystick_bridge_node.py  elevator_controller_node.py  elevator_joystick_bridge_node.py  horizontal_controller_node.py  horizontal_joystick_bridge_node.py  motor8_position_controller_node.py  motor_position_selector_joystick_bridge_node.py
src/r1_arm_control/test/: test_elevator_joystick_bridge.py  test_horizontal_joystick_bridge.py  test_motor8_position_control.py
src/robot_power_control/: README.md  TODO.md  package.xml  setup.cfg  setup.py
src/robot_power_control/robot_power_control/: joystick_shutdown_node.py
src/robot_power_control/test/: test_joystick_shutdown.py
systemd/: r1-control-autostart.service
(+68 files in other folders)
