<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_pneumatic_driver</name>
  <version>0.1.0</version>
  <description>Arduino Mega USB serial driver for pneumatic relay gripper.</description>

  <maintainer email="robotics@example.com">EdUHK Robocon Team</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>my_joystick_msgs</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
